# grpc_bazel

./: BUILD.bazel  WORKSPACE  bazel-bin  bazel-helloworld  bazel-out  bazel-testlogs  client.py  greeting_pb2.py  greeting_pb2_grpc.py  server.py
common_proto_files/: greeting.proto
